--- a/pipelines/experimental/gitops/deploy-kustomize-pl-tr.yaml
+++ b/pipelines/experimental/gitops/deploy-kustomize-pl-tr.yaml
@@ -2,7 +2,6 @@ apiVersion: triggers.tekton.dev/v1alpha1
 kind: TriggerBinding
 metadata:
   name: deploy-kustomize-pl-pullrequest-binding
-  namespace: tekton-pipelines
 spec:
   params:
   - name: gitrevision
@@ -11,20 +10,25 @@ spec:
     value: $(body.repository.clone_url)
   - name: git-project
     value: $(body.repository.name)
-  - name: docker-imagename
-    value: $(body.repository.name)
-  - name: docker-imagetag
-    value: $(body.pull_request.head.sha)
   - name: event-type
     value: $(header.X-Github-Event)
+  - name: webhooks-tekton-git-server
+    value: $(body.webhooks-tekton-git-server)
+  - name: webhooks-tekton-git-org
+    value: $(body.webhooks-tekton-git-org)
+  - name: webhooks-tekton-git-repo
+    value: $(body.webhooks-tekton-git-repo)
   - name: webhooks-tekton-git-branch
     value: $(body.webhooks-tekton-git-branch)
+  - name: webhooks-tekton-target-namespace
+    value: $(body.webhooks-tekton-target-namespace)
+  - name: webhooks-tekton-service-account
+    value: $(body.webhooks-tekton-service-account)
 ---
 apiVersion: triggers.tekton.dev/v1alpha1
 kind: TriggerBinding
 metadata:
   name: deploy-kustomize-pl-push-binding
-  namespace: tekton-pipelines
 spec:
   params:
   - name: gitrevision
@@ -33,20 +37,25 @@ spec:
     value: $(body.repository.clone_url)
   - name: git-project
     value: $(body.repository.name)
-  - name: docker-imagename
-    value: $(body.repository.name)
-  - name: docker-imagetag
-    value: $(body.head_commit.id)
   - name: event-type
     value: $(header.X-Github-Event)
+  - name: webhooks-tekton-git-server
+    value: $(body.webhooks-tekton-git-server)
+  - name: webhooks-tekton-git-org
+    value: $(body.webhooks-tekton-git-org)
+  - name: webhooks-tekton-git-repo
+    value: $(body.webhooks-tekton-git-repo)
   - name: webhooks-tekton-git-branch
     value: $(body.webhooks-tekton-git-branch)
+  - name: webhooks-tekton-target-namespace
+    value: $(body.webhooks-tekton-target-namespace)
+  - name: webhooks-tekton-service-account
+    value: $(body.webhooks-tekton-service-account)
 ---
 apiVersion: triggers.tekton.dev/v1alpha1
 kind: TriggerTemplate
 metadata:
   name: deploy-kustomize-pl-template
-  namespace: tekton-pipelines
 spec:
   params:
   - name: event-ref
@@ -67,16 +76,9 @@ spec:
     description: The branch for the Git repository
   - name: event-type
     description: The Git event type
-  - name: webhooks-tekton-docker-registry
-    description: The image registry
-  - name: docker-imagename
-    description: The docker image name
-  - name: docker-imagetag
-    description: The docker image tag
   - name: webhooks-tekton-service-account
     description: The ServiceAccount that the PipelineRun will execute under
   - name: webhooks-tekton-target-namespace
-    description: The namespace in which to create this TriggerTemplate's resources
   resourcetemplates:
   - apiVersion: tekton.dev/v1alpha1
     kind: PipelineResource
