Rework gitops tasks

--- a/pipelines/experimental/gitops/build-push-promote-task.yaml
+++ b/pipelines/experimental/gitops/build-push-promote-task.yaml
@@ -280,7 +280,7 @@ spec:
           fi
 
           gitCommit=$(git rev-parse --short HEAD)
-          services promote --from /workspace/$gitsource --to $(GITOPS_REPOSITORY_URL) --service $(inputs.params.git-project) --commit-message "Publish $(inputs.params.git-project) commit $gitCommit" --debug --repository-type $(GITOPS_REPOSITORY_TYPE)
+          services promote --from /workspace/$gitsource --to $(GITOPS_REPOSITORY_URL) --service $(inputs.params.git-project) --commit-message "Publish $(inputs.params.git-project) commit $gitCommit" --repository-type $(GITOPS_REPOSITORY_TYPE)
           
           if [ $? != 0 ]; then
             echo "[ERROR] Promote to gitops repo failed.  Please review logs above."
