--- a/pipelines/incubator/deploy-task.yaml
+++ b/pipelines/incubator/deploy-task.yaml
@@ -36,7 +36,7 @@ spec:
            echo "[INFO] Input param docker-imagename=$(inputs.params.docker-imagename)"
            echo "[INFO] Input param docker-imagetag=$(inputs.params.docker-imagetag)"
         if [[ (-z $(inputs.params.docker-imagename) ) || (-z $(inputs.params.docker-imagetag)) || (-z $(inputs.resources.docker-image.url))]]; then
-           echo "[ERROR] Either the input resource docker-image.url is empty or the incoming params 'docker-imagename' or 'docker-imagetag'are empty, please review the pipelinerun for the passing of the correct params values. Pipeline run aborted "
+           echo "[ERROR] Either the input resource docker-image.url is empty or the incoming params 'docker-imagename' and 'docker-imagetag' are empty, please review the pipelinerun for the passing of the correct params values. Pipeline run aborted "
            exit 1
         else
            OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE=$( /scripts/imageurl_imagename_lowercase.sh -u $(inputs.resources.docker-image.url) -n $(inputs.params.docker-imagename) -t $(inputs.params.docker-imagetag) )
