--- a/pipelines/experimental/gitops/deploy-gitops-pl-tr.yaml
+++ b/pipelines/experimental/gitops/deploy-gitops-pl-tr.yaml
@@ -1,7 +1,7 @@
 apiVersion: triggers.tekton.dev/v1alpha1
 kind: TriggerBinding
 metadata:
-  name: deploy-env-pl-pullrequest-binding
+  name: deploy-gitops-pl-pullrequest-binding
   namespace: tekton-pipelines
 spec:
   params:
@@ -25,7 +25,7 @@ spec:
 apiVersion: triggers.tekton.dev/v1alpha1
 kind: TriggerBinding
 metadata:
-  name: deploy-env-pl-push-binding
+  name: deploy-gitops-pl-push-binding
   namespace: tekton-pipelines
 spec:
   params:
@@ -49,7 +49,7 @@ spec:
 apiVersion: triggers.tekton.dev/v1alpha1
 kind: TriggerTemplate
 metadata:
-  name: deploy-env-pl-template
+  name: deploy-gitops-pl-template
   namespace: tekton-pipelines
 spec:
   params:
@@ -97,7 +97,7 @@ spec:
   - apiVersion: tekton.dev/v1beta1
     kind: PipelineRun
     metadata:
-      generateName: deploy-env-pl-run-
+      generateName: deploy-gitops-pl-run-
       namespace: $(params.webhooks-tekton-target-namespace)
       labels:
         webhooks.tekton.dev/gitServer: $(params.webhooks-tekton-git-server)
@@ -107,7 +107,7 @@ spec:
     spec:
       serviceAccountName: $(params.webhooks-tekton-service-account)
       pipelineRef:
-        name: deploy-env-pl
+        name: deploy-gitops-pl
       params:
       - name: event-type
         value: $(params.event-type)
