--- a/pipelines/experimental/gitops/deployment-condition.yaml
+++ b/pipelines/experimental/gitops/deployment-condition.yaml
@@ -17,13 +17,13 @@ spec:
     args:
       - -ce
       - |
-        echo "Checking if deploy-env-task should execute..."
+        echo "Checking if deploy-gitops-task should execute..."
         echo "Event-type = $(params.event-type)"
         echo "Event-ref = $(params.event-ref)"
         if [[ $(params.event-type) == "push" && $(params.event-ref) == "refs/heads/master" ]]; then
-          echo "[INFO] Event type is a push to master.  Executing deploy-env-task."
+          echo "[INFO] Event type is a push to master.  Executing deploy-gitops-task."
           exit 0
         else
-          echo "[INFO] Event type is not a push to master. Skipping deploy-env-task execution"
+          echo "[INFO] Event type is not a push to master. Skipping deploy-gitops-task execution"
           exit 1
         fi
