--- a/pipelines/incubator/build-task.yaml
+++ b/pipelines/incubator/build-task.yaml
@@ -18,10 +18,10 @@ spec:
   params:
   - name: docker-imagename
     type: string
-    default: ""
+    default: "null"
   - name: docker-imagetag
     type: string
-    default: ""
+    default: "null"
   steps:
   - name: build
     # This steps builds the source project using appsody build.
@@ -45,7 +45,7 @@ spec:
 
         # Docker does not support upper case characters in the image name.  Github does not have this restriction.
         # So lowercase the image name if it has any upper case characters.        
-        OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE=$( /scripts/imageurl_imagename_lowercase.sh -u $(inputs.resources.docker-image.url) -n $(inputs.params.docker-imagename) -t $(inputs.params.docker-imagetag) )
+        OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE=$( /scripts/imageurl_imagename_lowercase.sh -u "$(inputs.resources.docker-image.url)" -n "$(inputs.params.docker-imagename)" -t "$(inputs.params.docker-imagetag)" )
         retVal=$?
         if [ $retVal -ne 0 ]
         then
