adding test case file for unit testing the image_lowercase_script

--- a/pipelines/incubator/build-push-jk-pl-tr.yaml
+++ b/pipelines/incubator/build-push-jk-pl-tr.yaml
@@ -113,9 +113,9 @@ spec:
       - name: event-type
         value: $(params.event-type)
       - name: docker-imagename
-        value: ""
+        value: "null"
       - name: docker-imagetag
-        value: ""
+        value: "null"
       resources:
       - name: git-source
         resourceRef:
