aadeshpa travis automation to build and push image
kabanero-utils image will be build and pushed automartically to kabanero dockerhub, and also the digest of that image is used and updated in all task files.

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,12 @@ go:
 os: linux
 dist: bionic
 
+before_install:
+  - sudo apt-get -y install jq
+  
+script:
+  - ./ci/publish_utils_image.sh
+
 # note before_deploy will run before each deploy provider
 before_deploy:
   - . ./ci/package.sh
