--- a/pipelines/tests/pipeline/kabanero-pipelines-test-pipeline-run-resources.yaml
+++ b/pipelines/tests/pipeline/kabanero-pipelines-test-pipeline-run-resources.yaml
@@ -16,7 +16,7 @@ items:
   spec:
     params:
     - name: revision
-      value: test
+      value: issue182
     - name: url
       value: https://github.com/smcclem/kabanero-pipelines
     type: git
