--- a/pipelines/tests/pipeline/kabanero-pipelines-run-tests-task.yaml
+++ b/pipelines/tests/pipeline/kabanero-pipelines-run-tests-task.yaml
@@ -30,7 +30,15 @@ spec:
     args:
       - -c
       - |
-        echo "Scott"
+        cd $gitsource
+        cd ./pipelines/tests
+        chmod 755 ./main.sh
+        ./main.sh
+  
+       
+
+
+
        
         
     env:
